--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,47 @@
+name: test and build 
 
+on:
+  push:
+    branches:
+      - master
+    paths:
+      - '**/*'
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+        name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      - name: Docker setup
+        udes: docker/setup-buildx-action@v1
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install flake8 
+      # test code
+      - name: Run tests
+        run: |
+          flake8 --ignore=E501,F401 .
+      # docker credentials
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      # docker tag and push
+      - name: Docker build image
+        run: docker build -t demo-app:${GITHUB_SHA::7} .
+      - name: Docker tag
+        run: docker tag demo-app:${GITHUB_SHA::7} congthanh19/demo-app:${GITHUB_SHA::7}
+      - name: Docker push
+        run: docker push congthanh19/demo-app:${GITHUB_SHA::7}
