--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,15 +13,15 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-        name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: 3.8
 
       - name: Docker setup
-        udes: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
       - name: Install dependencies
         run: |
@@ -34,14 +34,12 @@ jobs:
           flake8 --ignore=E501,F401 .
       # docker credentials
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       # docker tag and push
       - name: Docker build image
-        run: docker build -t demo-app:${GITHUB_SHA::7} .
-      - name: Docker tag
-        run: docker tag demo-app:${GITHUB_SHA::7} congthanh19/demo-app:${GITHUB_SHA::7}
+        run: docker build -t congthanh19/demo-app:${{github.sha}} .
       - name: Docker push
-        run: docker push congthanh19/demo-app:${GITHUB_SHA::7}
+        run: docker push congthanh19/demo-app:${{github.sha}}
