--- a/deploy/deploy.yaml
+++ b/deploy/deploy.yaml
@@ -2,6 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: demo-app-deployment
+  annotations:
+    argocd-image-updater.argoproj.io/image-list: demo=congthanh19/demo-app
+    argocd-image-updater.argoproj.io/demo.update-strategy: newest-build
+    argocd-image-updater.argoproj.io/write-back-method: git
 spec:
   replicas: 2
   selector:
@@ -14,6 +18,6 @@ spec:
     spec:
       containers:
       - name: demo-app
-        image: 1nfosecsingh/demo-app:v20250105121337
+        image: congthanh19/demo-app
         ports:
         - containerPort: 5000
