--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,11 @@ on:
     branches:
       - master
     paths:
-      - '**/*'
+      - '**/*.py'
+      - Dockerfile
+      - requirements.txt
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -43,3 +47,15 @@ jobs:
         run: docker build -t congthanh19/demo-app:${{github.sha}} .
       - name: Docker push
         run: docker push congthanh19/demo-app:${{github.sha}}
+      # update image tag in deployment file
+      - name: Update deployment file
+        run: sed -i "s|image: congthanh19/demo-app:.*|image: congthanh19/demo-app:${{ github.sha }}|" demo-app.yaml
+      # commit and push changes to deployment file
+      - name: Commit and push changes
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add demo-app.yaml
+          git diff --cached --quiet || git commit -m "Update demo-app image to ${{ github.sha }} [skip ci]"
+          git push
+     
