update file main flow gitops

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,8 @@ jobs:
         run: docker push congthanh19/demo-app:${{github.sha}}
       # update image tag in deployment file
       - name: Update deployment file
-        run: sed -i "s|image: congthanh19/demo-app:.*|image: congthanh19/demo-app:${{ github.sha }}|" demo-app.yaml
+        run: |
+          sed -i 's|image: congthanh19/demo-app:.*|image: congthanh19/demo-app:${{ github.sha }}|' demo-app.yaml
       # commit and push changes to deployment file
       - name: Commit and push changes
         run: |
